--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
         </article>
     </main>
-    <footer>Site criado por Gustavo Guanabara para o CursoemVideo.</footer>
+    <footer>Site criado atraves do material do canal curso em vídeo</footer>
 </body>
 </html>
